<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:layout_marginLeft="25dp"
        android:layout_marginTop="70dp"
        android:layout_marginRight="25dp"
        android:layout_marginBottom="100dp"
        android:contentDescription="@string/pin_pass"
        android:src="@drawable/pin_password" />

    <EditText
        android:id="@+id/TextEmailAddress"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/imageView3"
        android:layout_centerInParent="true"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_mail"
        android:inputType="textEmailAddress"
        android:minHeight="48dp" />

    <EditText
        android:id="@+id/editTextPhone"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_phone_no"
        android:inputType="phone"
        android:minHeight="48dp"
        android:layout_centerInParent="true"
        android:layout_below="@+id/TextEmailAddress"/>

    <EditText
        android:id="@+id/TextPassword"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/editTextPhone"
        android:layout_centerInParent="true"
        android:autofillHints=""
        android:ems="10"
        android:gravity="center"
        android:hint="@string/enter_password"
        android:inputType="textPassword"
        android:minHeight="48dp" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/TextPassword"
        android:layout_centerInParent="true"
        android:layout_marginTop="25dp"
        android:background="@drawable/round"
        android:text="@string/submit" />

</RelativeLayout>